--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "webpack-dev-server",
+    "start:dev": "webpack serve --mode=development",
     "build": "webpack --color"
   },
   "author": "",
@@ -14,9 +14,9 @@
     "html-webpack-plugin": "^4.5.0",
     "ts-loader": "^8.0.11",
     "typescript": "^4.0.5",
-    "webpack": "^5.4.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack": "^5.49.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "pixi.js": "^5.3.3"
